--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -24,6 +24,15 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install -r requirements.txt
+          pip install pytest pytest-cov
       - name: Run tests
         run: |
-          python -m pytest -v tests
+          python -m pytest -v tests --cov=tests.test_calculator --cov-report=xml:pytest.xml --cov-report=term-missing
+        
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: ./pytest-coverage.txt
+          junitxml-path: ./pytest.xml  
+
+          
